# kofft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  TESTING.md  audit.toml  build.rs  package-lock.json  package.json  pwa-test-report.json  simple_test.js  test_file_loading.js  test_pwa.js
.cargo/: config.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: audit.yml  bench.yml  build.yml  ci.yml  coverage.yml  e2e-tests.yml  lint.yml  publish.yml  test.yml
benches/: bench_fft.rs
benchmarks/: README.md  latest.json
examples/: basic_usage.rs  benchmark.rs  cepstrum.rs  czt.rs  dct_usage.rs  embedded_example.rs  goertzel.rs  hilbert.rs  ndfft_usage.rs  parallel_benchmark.rs  print_threshold.rs  rfft_usage.rs  simd_speedup.rs  spectrogram.rs  stft.rs  stft_usage.rs  update_bench_readme.rs  verbose_logging.rs  wavelet_usage.rs
kofft-bench/: Cargo.toml
kofft-bench/benches/: aos_vs_soa.rs  bench_bluestein.rs  bench_dct.rs  bench_fft.rs  bench_ndfft.rs  bench_rfft.rs  bench_window.rs  memory_usage.rs  small_fft.rs  spectrogram_memory.rs  stft_parallel.rs  stockham_fft.rs  waveform_cache.rs  wavelet_memory.rs
kofft-bench/examples/: update_bench_readme.rs
react-spectrogram/: .eslintrc.json  ALBUM_ART_EXTRACTION_ANALYSIS.md  ALIGNMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  OPTIMISTIC_METADATA_README.md  PORTING_SUMMARY.md  README.md  SEEKBAR_REWRITE_SUMMARY.md  TECHNOTES.md  TESTING_RESULTS.md  create-test-with-artwork.html  debug-album-art-test.html  debug-album-art.html  design.md  expectation.md  index.html  package-lock.json  package.json  tailwind.config.js  test-audio-metadata.js  test-indexeddb.html  test-metadata-debug.html  test-mp3-album-art.html  test-new-seekbar.html  test-new-wasm.html  test-rust-wasm-metadata.js  test-seekbar-new.js  test-seekbar.html  test-wasm-browser.html  test-wasm-metadata.js  test-wasm-simple-debug.js  test-wasm-simple.html  test-wasm-simple.js  test-waveform.html  tsconfig.json  vite.config.ts  vitest.config.ts
react-spectrogram/e2e/: audio-file-loading.spec.ts  keyboard-shortcuts.spec.ts  playback-controls.spec.ts
react-spectrogram/src/: App.tsx  config.ts  index.css
react-spectrogram/src/hooks/: useAudioFile.ts  useKeyboardShortcuts.ts  useMarquee.ts  useMicrophone.ts  useScreenSize.ts
react-spectrogram/src/stores/: audioStore.ts  playlistSearchStore.ts  settingsStore.ts  uiStore.ts
react-spectrogram/src/test/: setup.ts
react-spectrogram/src/types/: index.ts
react-spectrogram/src/utils/: PlaybackEngine.ts  artwork.ts  audio.ts  audioPlayer.ts  fuzzy.ts  keyboard.ts  optimisticMetadataStore.ts  timeUpdater.ts  wasm.ts  waveform.ts
react-spectrogram/src/wasm/: react_spectrogram_wasm.js
react-spectrogram/test-fixtures/: adele-skyfall-30s.m4a
react-spectrogram/wasm/: Cargo.toml  package.json  react_spectrogram_wasm.d.ts  react_spectrogram_wasm_bg.wasm.d.ts  web_spectrogram.d.ts  web_spectrogram.js  web_spectrogram_bg.wasm  web_spectrogram_bg.wasm.d.ts
react-spectrogram/wasm/src/: lib.rs
react-spectrogram/web-spectrogram/: Cargo.toml  README.md  app.mjs  app.test.mjs  server.mjs
react-spectrogram/web-spectrogram/src/: lib.rs
react-spectrogram/web-spectrogram/wasm/: web_spectrogram.d.ts  web_spectrogram.js  web_spectrogram_bg.wasm.d.ts
sanity-check/: Cargo.toml
sanity-check/src/: lib.rs  main.rs
sanity-check/tests/: audio_formats.rs  wav_extension.rs
sanity-check/tests/fixtures/: test.flac.b64  test.mp3.b64  test_stereo.flac.b64
scripts/: dev.js  e2e-helper.js  e2e-helper.test.js  e2e-test.js  e2e.js
src/: cepstrum.rs  czt.rs  dct.rs  dst.rs  fft.rs  fft_kernels.rs  fuzzy.rs  goertzel.rs  hartley.rs  hilbert.rs  lib.rs  ndfft.rs  num.rs  resample.rs  rfft.rs  stft.rs  wavelet.rs  window.rs  window_more.rs
src/media/: index.rs  mod.rs  playback.rs  waveform_schema.sql
src/visual/: spectrogram.rs
test-utils/: wait.js
tests/: arm64_arch_detection.rs  backend_detection.rs  block_prefetch.rs  bluestein.rs  compile_features.rs  complex_mul.rs  complex_repr.rs  cpuflags_neon.rs  czt.rs  db_scale.rs  dct.rs  dst2.rs  dst_planner.rs  env_overrides.rs  env_thread_calibration.rs  features_enabled.rs  fft.rs  fft8_simd.rs  fft_arch_parity.rs  fft_edge.rs  fft_kernels.rs  fft_kernels_features.rs  fft_parallel_parity.rs  fuzzy_alloc.rs  fuzzy_match.rs  goertzel_example.rs  hartley_fft.rs  hilbert.rs  inverse_parallel.rs  istft_stream.rs  media_index.rs  memory_usage.rs  misaligned.rs  ndfft.rs  ndfft_flatten.rs  ndfft_overflow.rs  num.rs  parallel_override_visibility.rs  parallel_stockham.rs  planner_unsafecell.rs  (+32 more)
web/: README.md  package-lock.json  package.json
web-spectrogram/: Cargo.toml  README.md  app.mjs  app.test.mjs  build.sh  index.html  main.mjs  manifest.json  package-lock.json  package.json  seek_bar.mjs  server.test.mjs  spectrogram.mjs  sw.js  tsconfig.json  vite.config.ts
web-spectrogram/app/: index.html
web-spectrogram/app/public/: sw.js
web-spectrogram/app/src/: App.tsx  main.tsx  register-sw.ts  style.css
web-spectrogram/app/src/components/: PlaybackControls.tsx  Sidebar.tsx  SpectrogramCanvas.tsx
web-spectrogram/app/src/utils/: metadata.ts  spectrogram.ts  vinyl.ts
web-spectrogram/app/tests/: app.test.tsx  build.test.ts  metadata.test.ts  serviceWorker.test.ts  setup.ts  sidebar.test.tsx  spectrogram.test.ts  spectrogramCanvas.test.tsx
web-spectrogram/src/: lib.rs  main.rs  seek_bar.rs
web-spectrogram/static/: app.js  app.test.js  index.html  seekbar.js  style.css
web-spectrogram/tests/: app.test.mjs  main.test.mjs  wasm-stub.ts  wasm.rs
web-spectrogram/tests/pkg/: web_spectrogram.js
web-spectrogram/wasm/: web_spectrogram.js
web/apps/mfe-spectrogram/: LUT_README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.rapid.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
web/apps/shell/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
(+270 files in other folders)
