[package]
name = "kofft"
version = "0.1.0"
edition = "2021"
authors = ["Kian Ostad <c@kianostad.com>"]
description = "High-performance, no_std, MCU-friendly FFT, DCT, DST, Hartley, Wavelet, STFT, and more. Stack-only, SIMD, and batch transforms for embedded and scientific Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/okian/kofft"
documentation = "https://docs.rs/crates/kofft"
homepage = "https://github.com/okian/kofft"
readme = "README.md"
categories = ["algorithms", "mathematics", "embedded"]
keywords = ["fft", "dsp", "no_std", "mcu", "wavelet"]
exclude = ["proptest-regressions/*", "*.profraw", "*.profdata", "tarpaulin-report.html", "tests/*", "examples/*"]

[dependencies]
libm = "0.2"

[features]
default = ["std"]
std = []
parallel = ["rayon"]
x86_64 = []
aarch64 = []
wasm = []

[dev-dependencies]
rand = "0.8"
proptest = "1.4"

[dependencies.rayon]
version = "1.7"
optional = true

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "embedded_example"
path = "examples/embedded_example.rs"
required-features = []

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"
