[package]
name = "kofft"
version = "0.1.5"
edition = "2021"
authors = ["Kian Ostad <c@kianostad.com>"]
description = "High-performance, no_std, MCU-friendly FFT, DCT, DST, Hartley, Wavelet, STFT, and more. Stack-only, SIMD, and batch transforms for embedded and scientific Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/okian/kofft"
documentation = "https://docs.rs/crates/kofft"
homepage = "https://github.com/okian/kofft"
readme = "README.md"
categories = ["algorithms", "mathematics", "embedded"]
keywords = ["fft", "dsp", "no_std", "mcu", "wavelet"]
exclude = [
  "proptest-regressions/*",
  "*.profraw",
  "*.profdata",
  "tarpaulin-report.html",
  "tests/*",
  "examples/*",
]


[workspace]
members = ["kofft-bench", "sanity-check"]

[dependencies]
libm = "0.2"
proptest = { version = "1.4", optional = true }
rand = { version = "0.8", optional = true }
hashbrown = "0.14"
num_cpus = { version = "1.16", optional = true }

[features]
default = ["std"]
std = ["num_cpus"]
parallel = ["rayon"]
x86_64 = []
sse = []
aarch64 = []
wasm = []
avx2 = []
avx512 = []
slow = []
internal-tests = ["proptest", "rand"]
compile-time-rfft = []
simd = []
soa = []

[dependencies.rayon]
version = "1.7"
optional = true

[dev-dependencies]
hound = "3.5"
image = "0.24"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "embedded_example"
path = "examples/embedded_example.rs"
required-features = []

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "stft_usage"
path = "examples/stft_usage.rs"

[[example]]
name = "ndfft_usage"
path = "examples/ndfft_usage.rs"

[[example]]
name = "spectrogram"
path = "examples/spectrogram.rs"

[[example]]
name = "parallel_benchmark"
path = "examples/parallel_benchmark.rs"
required-features = ["parallel"]
