[package]
name = "kofft"
version = "0.1.5"
edition = "2021"
authors = ["Kian Ostad <c@kianostad.com>"]
description = "High-performance, no_std, MCU-friendly FFT, DCT, DST, Hartley, Wavelet, STFT, and more. Stack-only, SIMD, and batch transforms for embedded and scientific Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/okian/kofft"
documentation = "https://docs.rs/crates/kofft"
homepage = "https://github.com/okian/kofft"
readme = "README.md"
categories = ["algorithms", "mathematics", "embedded"]
keywords = ["fft", "dsp", "no_std", "mcu", "wavelet"]
exclude = [
  "proptest-regressions/*",
  "*.profraw",
  "*.profdata",
  "tarpaulin-report.html",
  "tests/*",
  "examples/*",
]
build = "build.rs"


[workspace]
members = ["kofft-bench", "sanity-check", "xtask"]

[dependencies]
libm = "0.2"
proptest = { version = "1.4", optional = true }
rand = { version = "0.8", optional = true }
hashbrown = "0.14"
num_cpus = { version = "1.16", optional = true }
colorous = { version = "1", optional = true }

[features]
default = ["std", "simd", "wasm"]
std = ["num_cpus", "colorous"]
parallel = ["rayon"]
# Architecture-specific SIMD backends
x86_64 = []      # AVX/SSE on x86_64
sse = []         # Force SSE2-only backend
aarch64 = []     # NEON on 64-bit ARM
wasm = []        # WebAssembly SIMD128
avx2 = []        # Enable AVX2-specific code paths
avx512 = []      # Enable AVX-512 code paths

# Miscellaneous features
slow = []
internal-tests = ["proptest", "rand"]
compile-time-rfft = []
simd = []
soa = []
precomputed-twiddles = ["std"]

[dependencies.rayon]
version = "1.7"
optional = true

[dev-dependencies]
hound = "3.5"
image = "0.24"
xtask = { path = "xtask" }
assert_cmd = "2"
tempfile = "3"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "embedded_example"
path = "examples/embedded_example.rs"
required-features = []

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "stft_usage"
path = "examples/stft_usage.rs"

[[example]]
name = "ndfft_usage"
path = "examples/ndfft_usage.rs"

[[example]]
name = "spectrogram"
path = "examples/spectrogram.rs"

[[example]]
name = "parallel_benchmark"
path = "examples/parallel_benchmark.rs"
required-features = ["parallel"]

[[example]]
name = "print_threshold"
path = "examples/print_threshold.rs"
required-features = ["parallel", "internal-tests"]
