[package]
name = "kofft-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
kofft = { path = "..", default-features = false, features = ["std", "slow"] }
criterion = { version = "0.7", features = ["html_reports"] }
rustfft = "6"
realfft = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = []
parallel = ["kofft/parallel"]
sse = ["kofft/sse"]
aarch64 = ["kofft/aarch64"]
avx2 = ["kofft/avx2"]

[[bench]]
name = "bench_fft"
harness = false

[[bench]]
name = "bench_dct"
harness = false

[[bench]]
name = "aos_vs_soa"
harness = false

[[bench]]
name = "bench_rfft"
harness = false

[[bench]]
name = "small_fft"
harness = false

[[example]]
name = "update_bench_readme"
path = "examples/update_bench_readme.rs"
