[package]
name = "kofft-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
kofft = { path = "..", default-features = false, features = ["std", "slow", "waveform-cache", "simd", "wasm"] }
criterion = { version = "0.7", features = ["html_reports"] }
rustfft = "6"
realfft = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.29", features = ["bundled"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.14"

[features]
default = []
parallel = ["kofft/parallel"]
x86_64 = ["kofft/x86_64"]
aarch64 = ["kofft/aarch64"]
sse = ["kofft/sse"]
avx2 = ["kofft/avx2"]
avx512 = ["kofft/avx512"]
wasm = ["kofft/wasm"]
simd = ["kofft/simd"]
soa = ["kofft/soa"]
precomputed-twiddles = ["kofft/precomputed-twiddles"]

[[bench]]
name = "bench_fft"
harness = false

[[bench]]
name = "waveform_cache"
harness = false

[[bench]]
name = "stft_parallel"
harness = false

[[example]]
name = "update_bench_readme"
path = "examples/update_bench_readme.rs"
