[package]
name = "sanity-check"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
kofft = { path = ".." }
colorous = "1"
svg = "0.10"
hound = "3.5"

[features]
default = []
parallel = ["kofft/parallel"]
x86_64 = ["kofft/x86_64"]
aarch64 = ["kofft/aarch64"]
sse = ["kofft/sse"]
avx2 = ["kofft/avx2"]
avx512 = ["kofft/avx512"]
wasm = ["kofft/wasm"]
simd = ["kofft/simd"]
soa = ["kofft/soa"]
precomputed-twiddles = ["kofft/precomputed-twiddles"]
