[package]
name = "sanity-check"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
kofft = { path = ".." }
colorous = "1"
svg = "0.10"
symphonia = { version = "0.5", features = ["flac", "mp3", "wav"] }
hound = "3.5"

[dev-dependencies]
hound = "3.5"
tempfile = "3"
base64 = "0.21"
