[package]
name = "web-spectrogram"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
kofft = { path = "..", features = ["wasm", "simd"], default-features = true }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

[dev-dependencies]
tempfile = "3"
http = "1"
tower = { version = "0.5", features = ["util"] }
