[package]
name = "web-spectrogram"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
kofft = { path = "..", features = ["wasm", "simd"], default-features = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3"
http = "1"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
http-body-util = "0.1"
