[package]
name = "web-spectrogram"
version = "0.1.0"
edition = "2021"
authors = ["Kian Ostad <c@kianostad.com>"]
description = "WebAssembly-powered spectrogram library using kofft DSP"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
kofft = { path = "../", features = ["std", "wasm", "simd", "precomputed-twiddles"] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[workspace]
