[package]
name = "web-spectrogram"
version = "0.1.0"
edition = "2021"
authors = ["Kian Ostad <c@kianostad.com>"]
description = "WebAssembly-powered spectrogram PWA using kofft DSP library"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

# Unified tagging/props across formats
lofty = "0.22"

# DSP library for waveform generation
kofft = { path = "../../" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[workspace]
